# gazebo_classic_ardupilot

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
include/: GimbalControllerPlugin.hh
models/my_gimbal_3d/: model.config  model.sdf
models/my_gimbal_3d/meshes/: 1st_link.STL  2nd_link.STL  base_link.STL  camera.STL
models/my_gimbal_3d/urdf/: my_gimbal_3d.csv  my_gimbal_3d.urdf
src/: ArduPilotPlugin.cc  CMakeLists.txt  GimbalControllerPlugin.cc
